add the homepage for bcr

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "bloggy",
+  "name": "blue-cottage-remodeling-llc",
   "version": "0.1.0",
-  "homepage": "http://www.forteworks.com/build",
+  "homepage": "https://www.blue-cottage-remodeling.com/build",
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.11.3",
